Add multiple updates and fixes

--- a/battleground-schools.html
+++ b/battleground-schools.html
@@ -906,7 +906,7 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="homepage.html">Home</a></li>
-          <li><a href="index.html">Register & Adopt</a></li>
+          <li><a href="registration.html">Register & Adopt</a></li>
           <li><a href="map.html">Prayer Map</a></li>
           <li><a href="prayer-walking-tips.html">Prayer Walking Tips</a></li>
           <li><a href="canopy-of-protection.html">Canopy of Protection</a></li>
