--- a/homepage.html
+++ b/homepage.html
@@ -791,7 +791,7 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="homepage.html" class="active-page">Home</a></li>
-          <li><a href="index.html">Register & Adopt</a></li>
+          <li><a href="registration.html">Register & Adopt</a></li>
           <li><a href="map.html">Prayer Map</a></li>
           <li><a href="prayer-walking-tips.html">Prayer Walking Tips</a></li>
           <li><a href="canopy-of-protection.html">Canopy of Protection</a></li>
@@ -817,7 +817,7 @@
           HAVE NEVER BEEN MORE IMPORTANT
         </p>
         <div class="hero-buttons">
-          <a href="index.html" class="btn btn-primary"
+          <a href="registration.html" class="btn btn-primary"
             >Register & Adopt a School</a
           >
           <a href="map.html" class="btn btn-secondary">View Prayer Map</a>
@@ -990,7 +990,9 @@
           spiritual atmosphere of our schools and impact countless lives for
           eternity.
         </p>
-        <a href="index.html" class="btn btn-primary">Start Praying Today</a>
+        <a href="registration.html" class="btn btn-primary"
+          >Start Praying Today</a
+        >
       </div>
     </section>
 
