--- a/prayer-walking-tips.html
+++ b/prayer-walking-tips.html
@@ -907,7 +907,7 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="homepage.html">Home</a></li>
-          <li><a href="index.html">Register & Adopt</a></li>
+          <li><a href="registration.html">Register & Adopt</a></li>
           <li><a href="map.html">Prayer Map</a></li>
           <li><a href="#" class="active-page">Prayer Walking Tips</a></li>
           <li><a href="#">Canopy of Protection</a></li>
